crates/pcbc/tests/snapshots/electrical_checks__passing_check.snap
---
source: crates/pcb/tests/electrical_checks.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (0 components)
